--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "lint": "eslint .",
     "format": "prettier --write 'src/**/*.ts'",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "seed": "ts-node src/utils/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -32,12 +33,12 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.17.0",
     "winston": "^3.13.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@faker-js/faker": "^8.4.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/bcryptjs": "^2.4.6",
@@ -56,6 +57,7 @@
     "lint-staged": "^15.2.7",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
+    "prisma": "^5.17.0",
     "semantic-release": "^24.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
