--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,12 @@
 DATABASE_URL=
+
+PORT=
+
+NODE_ENV=
+
+ACCESS_TOKEN_SECRET_KEY=
+REFRESH_TOKEN_SECRET_KEY=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
