--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@types/multer": "^1.4.11",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.13.1",
     "zod": "^3.23.8"
   },
