--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,13 @@ NODE_ENV=
 
 ACCESS_TOKEN_SECRET_KEY=
 REFRESH_TOKEN_SECRET_KEY=
+RESET_PASSWORD_SECRET_KEY=
 
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+
+FRONTEND_URL=
