Revert "Merge pull request #1 from VatsalDave2102/feat/authentication"
This reverts commit c0db4a7bab1b249b83a4f9218e0bf614592768dd, reversing
changes made to 79a3d561da3d4721fb5ad7376309da021c8b2aad.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "files": true
-  },
+  "exclude": ["node_modules"]
 }
