--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write 'src/**/*.ts'",
     "release": "semantic-release",
     "seed": "ts-node src/utils/seed.ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "swagger": "ts-node src/utils/swagger.ts"
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.12",
     "@types/nodemailer": "^6.4.15",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.57.0",
@@ -68,6 +70,8 @@
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "semantic-release": "^24.0.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0"
