--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Social media app",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "npm run swagger && node dist/server.js",
+    "dev": "npm run swagger && nodemon src/server.ts",
     "build": "tsc",
     "lint": "eslint .",
     "format": "prettier --write 'src/**/*.ts'",
